playstyle.css
/* ... */
#will div:hover, #modwill div:hover
{
	box-shadow: 0 0 2px yellow;
}
.deadplayer
{
	background:grey;
	
}
.deadplayer div
{
	width:100%;
	height:50%;
}
.blocker
{
	position:absolute;
	top:0;
	left:0;
	right:0;
	bottom:0;
	background:rgba(160,160,160,0.9);
}
.alert
{
	text-align:center;
	position:absolute;
	top:20%;
	left:40%;
	right:40%;
	bottom:20%;
	font-family: Arial;
}
.alert img
{
	height:250px;
	width:250px;
}
.controlbutton
{
	width:10%;
	float:left;
}
.controlbutton
{
   border-radius: 4px;
   box-shadow: rgba(0,0,0,1) 0 1px 0;
   text-shadow: rgba(0,0,0,.4) 0 1px 0;
   text-decoration: none;
   
    background: white;
}
/*----Buttons----*/
.mafiabutton {
   background: url('maf.png'), linear-gradient(#c40e0e, #d66565);
   background-size:100%;
  }
.mafiabutton:hover {
   background: url('maf.png'), #b51a1a;
   background-size:100%;
   }
.mafiabuttondown {
	background: url('maf.png'), #FF0000;
	background-size:100%;
}
.jailorbutton {
   background: #919191;
   background: url('jailor.png'), linear-gradient(#303030,#919191);
   background-size:100%;
 }
.jailorbutton:hover {
   background: url('jailor.png'), #505050;
   background-size:100%;
 }
.jailorbuttondown {
   background: url('jailor.png'), #B7B7B7;
   background-size:100%;
}
.spybutton {
   background: #65a9d7;
   background: url('spy.png'), linear-gradient(#3e779d, #65a9d7);
   background-size:100%;
  }
.spybutton:hover {
   background:url('spy.png'),#0448A9;
   background-size:100%;
}
.spybuttondown {
   background:url('spy.png'),#0069FF;
   background-size:100%;
}
.mayorbutton {
   background: #1ccf00;
   background: url('mayor.png'), linear-gradient(#107d06, #1ccf00);
   background-size:100%;
 }
.mayorbutton:hover {
   background: url('mayor.png'), #208500;
   background-size:100%;
}
.mayorbuttondown {
   background: url('mayor.png'), #3EFF00;
   background-size:100%;
}
.mediumbutton {
   background: #7a941e;
   background: url('med.png'), linear-gradient(#453d0a, #7a941e);
   background-size:100%;
}
.mediumbutton:hover {
   background: url('med.png'),#3A4518;
   background-size:100%;
}
.mediumbuttondown {
   background: url('med.png'), #789A0B;
   background-size:100%;
}
.killbutton
{
	background: linear-gradient(#c40e0e, #d66565);
	width: 20%;
	float:right;
	text-align:center;
	cursor:default;
}
.killbutton:hover
{
	background: #b51a1a;
}
.revivebutton
{
	background: linear-gradient(#55BF0A, #0E7800);
	width: 20%;
	float:right;
	text-align:center;
	cursor:default;
}
.revivebutton:hover
{
	background: #55BF0A;
}
.jailbutton
{
	background: linear-gradient(#021E3E, #424242);
	width: 20%;
	float:right;
	text-align:center;
	cursor:default;
	color:#CCCCCC;
}
.jailbutton:hover
{
	background: #021E3E;
}
.releasebutton
{
	background: linear-gradient(#CACACA, #B5B5B5);
	width: 20%;
	float:right;
	text-align:center;
	cursor:default;
	color:black;
}
.releasebutton:hover
{
	background:#CACACA;
}
.more
{
	width: 5%;
	float:right;
	text-align:center;
	cursor:default;
	color:black;
}
.more:hover
{
	background:#B8B8B8;
}
#morelist
{
	position:absolute;
	width:10%;
	right:0;
	background:white;
	border:1px solid black;
	list-style:none;
	padding:0;
}
.morelistheading
{
	width:100%;
	background:#989898;
}
.morelistitem:hover
{
	background:#C4C4C4;
}
.modwillbutton
{
	width: 5%;
	float:right;
	text-align:center;
	cursor:default;
	color:white;
	background:#8B6914;	
	font-size:10px;
}
.modwillbutton:hover
{
	background:#E1D45B;
	color:black;
}
.num
{
	padding-left:5px;
	float:left;
}
.name
{
	float:left;
	overflow:hidden;
}
.setroles
{
	background: url('accept.png'), linear-gradient(#f9f9f9, #e9e9e9);
	background-size: 100% 100%;
	height:100%;
	flex-grow:1;
	cursor:pointer;
}
.roll
{
	background: url('roll.png'), linear-gradient(#f9f9f9, #e9e9e9);
	background-size: 100% 100%;
	height:100%;
	flex-grow:1;
	cursor:pointer;
}
.roll:hover
{
	background: url('roll.png'), linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
	background-size: 100% 100%;
}
.setroles:hover
{
	-moz-filter: brightness(1.5);
	-webkit-filter: brightness(1.5);
	-o-filter: brightness(1.5);
	-ms-filter: brightness(1.5);
	filter: brightness(1.5);
}
.showroles, .showlist
{
	height:80%;
	flex-grow:2;
	text-align:center;
	background:linear-gradient(#f9f9f9, #e9e9e9);
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	margin-top:auto;
	margin-bottom:auto;
	vertical-align:middle;
	cursor:pointer;
	font-weight:bold;
	color:#666666;
	font-family:Arial;
	font-size:15px;
	border:1px solid #dcdcdc;
	padding-top:6px;
}
.showroles:hover, .showlist:hover
{
	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
	background-color:#e9e9e9;
}
.showroles:active, .showlist:active
{
	background:#CACACA;
}
.rolelistcontrols
{
	display:flex;
}
/*--Verdicts--*/
.verdictinterface
{
	position:absolute;
	left:80%; /*Gets animated to 60%*/
	right:20%;
	top:5%;
	bottom:90%;
	background:orange;
	border-bottom-left-radius:12px;
	border: black solid 2px;
	border-right: black solid 1px;
}
.verdictbutton
{
	height:100%;
	width:50%;
	float:left;
	text-align:center;
	font-size:20px;
	cursor:pointer;
}
.guiltybutton
{
	background:linear-gradient(#FF0000,#990000);
	border-bottom-left-radius:8px;
	margin-right:-1px;
	border-right:1px solid black;
}
.guiltybutton:hover
{
	background:red;
}
.innobutton
{
	background:linear-gradient(#60FF00,#118100);
	margin-left:-1px;
	border-left:1px solid black;	
}
.innobutton:hover
{
	background:lime;
}
/*----Announcement tags----*/
maf
{
	color:red;
}
arso
{
	color:#E88718;
}
ww
{
	color:#855217;
}
jester
{
	color:#E542C7;
}
town
{
	color:#4CC327;
}
sk
{
	color:#10188C;
}
neut
{
	color:grey;
}
/*----Chat messages----*/
.mafia
{
	color:red;
}
.dead, .medium
{
	color: grey;
    text-shadow: 0px 0px 10px #6FADB1;
}
.jailor, .jailed
{
	color:#643E33;
}
.jailing
{
	background:#BDBDBD;
}
.moon
{
	background:#249AC7;
	color:white;
}
.whisper
{
	color:#5D0034;
}
.mod
{
	color:#3454E5;
}
.dying
{
	background:#A00100;
	color:white;
}
.reviving
{
	background:#4ADF00;
}
/* ... */

